--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
     "@reduxjs/toolkit": "^1.9.2",
+    "axios": "^1.3.3",
     "debounce": "^1.2.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
