--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.8.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "vite-tsconfig-paths": "^4.0.5",
     "yup": "^1.0.0"
   },
   "devDependencies": {
